# square

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  go.work  package.json  vetur.config.js
django/: .gitignore  fixtures.yaml  gen.raku  manage.py
django/misc/: asgi.py  middleware.py  prod.py  settings.py  urls.py  wsgi.py
django/src/: admin.py  apps.py  models.py  settings.py  tests.py  urls.py  views.py
micro/: .gitignore  gen.raku  go.mod
micro/protos/: LL__template__TT.proto  db.proto
micro/templates/: LL__converter__TT.go  LL__db__TT.proto
migrations/2021-02-04-111322_init/: down.sql  up.sql
pages/: index.html  package.json  vite.config.ts
pages/src/: App.vue  index.ts
pages/src/lib/: router.ts  state.ts  ui.ts
pages/src/page/: CreateUser.vue  UserInfo.vue  UserLogin.vue
server/: Cargo.toml
server/src/: auth.rs  common.rs  db.rs  main.rs  rest.rs  schema.rs  session.rs
tools/: test.py
web/: package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/lib/: router.ts  state.ts  store_user.ts  stores.ts
web/src/views/: UserCreate.vue  UserInfo.vue  UserLogin.vue
