[package]
name = "square-core"
version = "0.1.0"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
flexi_logger = "*"
async-trait = "*"
anyhow = "*"
dotenv = "*"
rand = "*"
uuid = "*"
sha2 = "*"
diesel = { version = "2.0.0-rc.1", features=["postgres", "uuid", "r2d2"] }
axum = { version = "*", features=["headers"] }
tokio = { version = "*", features=["rt-multi-thread"] }
serde = "*"
serde_json = "*"
jsonwebtoken = "*"
headers = "*"
