[package]
name = "square-core"
version = "0.1.0"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libaries
log = "*"
flexi_logger = "*"
thiserror = "*"
dotenv = "*"
rand = "*"
uuid = "*"
sha2 = "*"
serde = "*"
serde_json = "*"
jsonwebtoken = "*"
headers = "*"

# frameworks
diesel = { version = "2.0.0-rc.1", features=["postgres", "uuid", "r2d2"] }
axum = { version = "*", features=["headers", "macros"] }
tokio = { version = "*", features=["rt-multi-thread"] }

# plugins
tower-http = { version = "*", features=["trace"] }
axum-sessions = "*"
